tests/baselines/reference/jsdocPropertyTagInvalid.errors.txt
/a.js(3,15): error TS2552: Cannot find name 'sting'. Did you mean 'String'?


==== /a.js (1 errors) ====
    /**
     * @typedef MyType
     * @property {sting} [x]
                  ~~~~~
!!! error TS2552: Cannot find name 'sting'. Did you mean 'String'?
!!! related TS2728 /.ts/lib.es5.d.ts:530:13: 'String' is declared here.
     */
    
    /** @param {MyType} p  */
    export function f(p) { }
    
==== /b.js (0 errors) ====
    import { f } from "./a.js"
    f({ x: 42 })
    